# ohmmeter

./: CMakeLists.txt  README.md  main.c
